# firefly-iii-rs

./: Cargo.toml  README.md  config.yaml  firefly-iii-1.5.5.yaml  generate.sh  release.toml
docs/: AboutApi.md  Account.md  AccountArray.md  AccountRead.md  AccountRoleProperty.md  AccountSearchFieldFilter.md  AccountSingle.md  AccountStore.md  AccountTypeFilter.md  AccountTypeProperty.md  AccountUpdate.md  AccountsApi.md  AttachableType.md  Attachment.md  AttachmentArray.md  AttachmentRead.md  AttachmentSingle.md  AttachmentStore.md  AttachmentUpdate.md  AttachmentsApi.md  AutoBudgetPeriod.md  AutoBudgetType.md  AutocompleteAccount.md  AutocompleteApi.md  AutocompleteBill.md  AutocompleteBudget.md  AutocompleteCategory.md  AutocompleteCurrency.md  AutocompleteCurrencyCode.md  AutocompleteObjectGroup.md  AutocompletePiggy.md  AutocompletePiggyBalance.md  AutocompleteRecurrence.md  AutocompleteRule.md  AutocompleteRuleGroup.md  AutocompleteTag.md  AutocompleteTransaction.md  AutocompleteTransactionId.md  AutocompleteTransactionType.md  AvailableBudget.md  (+211 more)
src/apis/: about_api.rs  accounts_api.rs  attachments_api.rs  autocomplete_api.rs  available_budgets_api.rs  bills_api.rs  budgets_api.rs  categories_api.rs  charts_api.rs  client.rs  configuration.rs  configuration_api.rs  currencies_api.rs  currency_exchange_rates_api.rs  data_api.rs  import_api.rs  insight_api.rs  links_api.rs  mod.rs  object_groups_api.rs  piggy_banks_api.rs  preferences_api.rs  recurrences_api.rs  rule_groups_api.rs  rules_api.rs  (+6 more)
templates/: Cargo.mustache  README.mustache  model.mustache
(+224 files in other folders)
