[package]
name = "firefly-iii"
version = "0.1.0-alpha.1"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
description = "Rust API client for firefly-iii"
license = "AGPL-3.0"
documentation = "https://docs.rs/firefly-iii"
repository = "https://github.com/barskern/firefly-iii-rs"
readme = "README.md"
keywords = ["openapi", "economy", "client"]
categories = ["api-bindings"]

[dependencies]
async-trait = { version = "0.1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "2.1"
urlencoding = "1"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }

[dev-dependencies]
