[package]
name = "firefly-iii"
version = "0.3.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
description = "Rust API client for firefly-iii"
license = "AGPL-3.0"
documentation = "https://docs.rs/firefly-iii"
repository = "https://github.com/barskern/firefly-iii-rs"
readme = "README.md"
keywords = ["openapi", "economy", "client"]
categories = ["api-bindings"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
